--- a/css/partials/buttons.scss
+++ b/css/partials/buttons.scss
@@ -53,9 +53,14 @@ TABLE OF CONTENTS:
 	transition: 0.3s;
 	border: 2px solid #DCDCDC;
 	width: 80px;
+	color: black;
 
 	&:hover {
-		border: 2px solid #8C8C8C ;
+		border: 2px solid #8C8C8C;
+	}
+
+	a {
+		color: black;
 	}
 }
 
