--- a/css/partials/variables.scss
+++ b/css/partials/variables.scss
@@ -1,5 +1,19 @@
+/*
+
+GLOBAL VARIABLES
+--------------------------------------------------
+
+*/
+
+
+// MEDIA QUERIES
+
 $break-small: "screen and (max-width: 500px)";
-$break-medium: "screen and (max-width: 622px)";
+$break-medium: "screen and (max-width: 650px)";
+$break-large: "screen and (max-width: 830px)";
+
+
+// COLOURS
 
 $dark-blue: #0e76a8;
 $light-grey: #F6F6F6;
